--- a/codigo-fonte/SeuEmbarque/src/Puc.SeuEmbarque.Presentation/Views/Formulario/formulario_reg.cshtml
+++ b/codigo-fonte/SeuEmbarque/src/Puc.SeuEmbarque.Presentation/Views/Formulario/formulario_reg.cshtml
@@ -187,7 +187,7 @@
 
             $('.redirecionar').on('click', function () {
                 var textoLink = MontarMensagem();
-                var linkWhatsapp = 'https://api.whatsapp.com/send?phone=5531997362114&text=' + textoLink;
+                var linkWhatsapp = 'https://api.whatsapp.com/send?phone=55&text=' + textoLink;
                 if(ValidarForm()){
                     window.open(linkWhatsapp, '_blank'); 
                 }
